# mmemoji

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.md  poetry-requirements.txt  pyproject.toml  renovate.json  setup.cfg  setup.py  sonar-project.properties
.github/workflows/: build.yml
src/mmemoji/: __init__.py  __main__.py  cli.py  decorators.py  emoji.py  exceptions.py  version.py
src/mmemoji/commands/: create.py  delete.py  download.py  list.py  search.py
tests/: conftest.py  test_cli.py  test_commands_create.py  test_commands_delete.py  test_commands_download.py  test_commands_list.py  test_commands_search.py  test_decorators.py  test_emoji.py  utils.py
tests/cassettes/: test_create_emoji.yaml  test_create_exiting_emoji.yaml  test_delete_absent_emoji.yaml  test_delete_emoji.yaml  test_force_create_emoji.yaml  test_force_create_existing_emoji.yaml  test_force_delete_absent_emoji.yaml  test_force_delete_emoji.yaml  test_interactive_create_emoji.yaml  test_interactive_delete_emoji.yaml  test_list_emoji.yaml  test_no_clobber_create_emoji.yaml  test_no_clobber_create_existing_emoji.yaml  test_search_emoji.yaml  test_search_emoji_non_matching_prefix_only.yaml  test_search_prefix_only.yaml
tests/scripts/: .env.test  generate-sampledata.sh  sampledata.json  setup-mattermost.py  setup-mattermost.sh  setup.sh
