[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
source = ["src"]
relative_files = true

[tool.mypy]
files = ["."]
exclude = "^build/"
mypy_path = "src"
show_column_numbers = true
strict = true
strict_optional = true
warn_no_return = true
incremental = false
cache_dir = "/dev/null"

[[tool.mypy.overrides]]
module = ["filetype", "mattermostdriver.*"]
ignore_missing_imports = true

[tool.poetry]
name = "mmemoji"
version = "0.5.0"
description = "Custom Emoji manager command-line for Mattermost 😎"
readme = "README.md"
authors = []
classifiers=[
  "Environment :: Web Environment",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
keywords = ["cli", "emoji", "mattermost"]
repository = "https://github.com/maxbrunet/mmemoji.git"
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
click = ">=8.0.0"
filetype = ">=0.1.3"
mattermostdriver = ">=6.1.2"
requests = ">=2.19.0"
tabulate = ">=0.7.3"
typing-extensions = { version = ">=3.10.0.0", python = "<3.10" }
Unidecode = ">=0.04.1"

[tool.poetry.group.dev.dependencies]
mypy = "==1.8.0"
pytest = "==7.4.4"
pytest-cov = "==4.1.0"
ruff = "==0.1.11"
types-requests = "==2.31.0.20240125"
types-tabulate = "==0.9.0.20240106"

[tool.poetry.plugins."console_scripts"]
"mmemoji" = "mmemoji.cli:cli"

[tool.pytest.ini_options]
addopts = "--verbose"

[tool.ruff]
line-length = 79
select = [
  "F",    # Pyflakes
  "E",    # pycodestyle (error)
  "W",    # pycodestyle (warning)
  "C90",  # mccabe
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "A",    # flake8-builtins
  "C4",   # flake8-comprehensions
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "PT",   # flake-pytest-style
  "TCH",  # flake8-type-checking
  "PGH",  # pygrep-hooks
  "PERF", # Perflint
  "RUF",  # Ruff-specific
]
src = ["src"]
target-version = "py38"
