[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "mmemoji"
description = "Custom Emoji manager command-line for Mattermost 😎"
readme = "README.md"
authors = []
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
keywords = ["cli", "emoji", "mattermost"]
license = {text = "GPLv3"}
dynamic = ["version"]
requires-python = ">=3.8,<4.0"
dependencies = [
  "click>=8.0.0",
  "filetype>=0.1.3",
  "mattermostdriver>=6.1.2",
  "requests>=2.19.0",
  "tabulate>=0.7.3",
  "typing-extensions>=3.10.0.0; python_version < \"3.10\"",
  "Unidecode>=0.04.1",
]

[project.scripts]
mmemoji = "mmemoji.cli:cli"

[project.urls]
repository = "https://github.com/maxbrunet/mmemoji.git"
changelog = "https://github.com/maxbrunet/mmemoji/blob/main/CHANGELOG.md"

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
source = ["src"]
relative_files = true

[tool.mypy]
files = ["."]
mypy_path = "src"
show_column_numbers = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["filetype", "mattermostdriver.*"]
ignore_missing_imports = true

[tool.pdm.dev-dependencies]
dev = [
  "mypy==1.11.0",
  "pytest==8.3.2",
  "pytest-cov==5.0.0",
  "ruff==0.5.4",
  "types-requests==2.32.0.20240712",
  "types-tabulate==0.9.0.20240106",
]

[tool.pdm.version]
source = "scm"

[tool.pytest.ini_options]
addopts = "--verbose"

[tool.ruff]
line-length = 79
src = ["src"]
target-version = "py38"

[tool.ruff.lint]
select = [
  "F",    # Pyflakes
  "E",    # pycodestyle (error)
  "W",    # pycodestyle (warning)
  "C90",  # mccabe
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "A",    # flake8-builtins
  "C4",   # flake8-comprehensions
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "PT",   # flake8-pytest-style
  "TCH",  # flake8-type-checking
  "PGH",  # pygrep-hooks
  "PERF", # Perflint
  "RUF",  # Ruff-specific
]
