[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "ruff==0.15.18",
  "ty==0.0.51",
  "types-tabulate==0.10.0.20260508",
]

[project]
name = "mmemoji"
description = "Custom Emoji manager command-line for Mattermost 😎"
readme = "README.md"
authors = []
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Utilities",
]
keywords = ["cli", "emoji", "mattermost"]
license = {text = "GPLv3"}
dynamic = ["version"]
requires-python = ">=3.10,<4.0"
dependencies = [
  "click>=8.2.0",
  "filetype>=0.1.3",
  "httpx>=0.28.1",
  "mattermostautodriver>=10.12.0",
  "tabulate>=0.7.3",
  "typing-extensions>=4.1.0; python_version < '3.12'",
  "Unidecode>=0.04.1",
]

[project.scripts]
mmemoji = "mmemoji.cli:cli"

[project.urls]
repository = "https://github.com/maxbrunet/mmemoji.git"
changelog = "https://github.com/maxbrunet/mmemoji/blob/main/CHANGELOG.md"

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
source = ["src"]
relative_files = true

[tool.hatch.version]
source = "vcs"

[tool.pytest]
minversion = "9.0"
addopts = [
    "--import-mode=importlib",
    "--verbose",
]
strict = true

[tool.ruff]
line-length = 79
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = [
  "F",    # Pyflakes
  "E",    # pycodestyle (error)
  "W",    # pycodestyle (warning)
  "C90",  # mccabe
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "ANN",  # flake8-annotations
  "B",    # flake8-bugbear
  "A",    # flake8-builtins
  "C4",   # flake8-comprehensions
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "PYI",  # flake8-pyi
  "PT",   # flake8-pytest-style
  "TCH",  # flake8-type-checking
  "PGH",  # pygrep-hooks
  "PERF", # Perflint
  "RUF",  # Ruff-specific
]

[tool.ty.rules]
missing-type-argument = "error"
possibly-unresolved-reference = "warn"

[tool.ty.terminal]
error-on-warning = true
